# palace

./: .gitignore  Cargo.toml  Readme.md
.cargo/: config
.github/workflows/: rust.yml
convert/: Cargo.toml
convert/src/: main.rs
demo-large/: Cargo.toml
demo-large/src/: main.rs
demo-mean/: Cargo.toml
demo-mean/src/: main.rs
demo-raycaster/: Cargo.toml
demo-raycaster/src/: main.rs
demo-sliceviewer/: Cargo.toml
demo-sliceviewer/src/: main.rs
graph-stream/gs-core/: Cargo.toml
graph-stream/gs-core/src/: lib.rs
graph-stream/gsgui/: .gitignore  Cargo.toml
graph-stream/gsgui/src/: main.rs
id/: Cargo.toml
id-derive/: Cargo.toml
id-derive/src/: lib.rs
id/src/: lib.rs
id/tests/: derive.rs
palace-core/: Cargo.toml
palace-core/src/: aabb.rs  array.rs  chunk_utils.rs  coordinate.rs  data.rs  dim.rs  dtypes.rs  event.rs  id.rs  jit.rs  lib.rs  mat.rs  operator.rs  operators.rs  runtime.rs  storage.rs  task.rs  task_graph.rs  task_manager.rs  test_util.rs  threadpool.rs  transfunc.rs  util.rs  vec.rs  vulkan.rs
palace-core/src/glsl/: atomic.glsl  color.glsl  hash.glsl  mat.glsl  page_table.glsl  randomwalker_shared.glsl  sample.glsl  size_util.glsl  tensormetadata.glsl  tensormetadata_generic.glsl  util.glsl  util2d.glsl  vec.glsl  vec_generic.glsl  vesselness.glsl
palace-core/src/operators/: aggregation.rs  array.rs  bin_ops.rs  const_chunks.rs  conv.rs  geometry.rs  gui.rs  kernels.rs  png.rs  png_writer.rs  procedural.rs  rasterize_function.rs  raw.rs  raycaster.rs  rechunk.rs  resample.rs  scalar.rs  slice.rs  sliceviewer.rs  splitter.rs  tensor.rs  transform_points.glsl  vesselness.rs  volume.rs  volume_gpu.rs
palace-core/src/operators/imageviewer/: imageviewer.glsl  mod.rs
palace-core/src/operators/randomwalker/: best_centers.glsl  cg_alpha.glsl  cg_beta.glsl  cg_init.glsl  dot_product.glsl  dot_product_step.glsl  expand_sample.glsl  extract_inv_diag.glsl  hierarchical.rs  init_rw_weights.glsl  mod.rs  point_wise_mul.glsl  randomwalker_mat_setup.glsl  randomwalker_weight_pairs.glsl  randomwalker_weights.glsl  randomwalker_weights_centers.glsl  rasterize_points.glsl  results_to_tensor.glsl  scale_and_sum.glsl  scale_and_sum_quotient.glsl  seeds_hierarchical.glsl  shrink_sample.glsl  solver.rs  sparse_mat_prod.glsl  tensor_vec_table_finish.glsl  tensor_vec_table_init.glsl  tensor_vec_table_step.glsl  weights.rs
palace-core/src/operators/raycaster/: entryexitpoints.frag  entryexitpoints.vert  entrypoints_inside.glsl  mod.rs  raycaster.glsl
palace-core/src/operators/sliceviewer/: mod.rs  sliceviewer.glsl
palace-core/src/storage/: cpu.rs  disk.rs  gpu.rs  page_table_delete.glsl  page_table_insert.glsl  ram.rs
palace-core/src/vulkan/: memory.rs  pipeline.rs  shader.rs  state.rs  window.rs
palace-hdf5/: Cargo.toml
palace-hdf5/src/: lib.rs
palace-io/: Cargo.toml
palace-io/src/: lib.rs
palace-nifti/: Cargo.toml
palace-nifti/src/: lib.rs
palace-png/: Cargo.toml
palace-png/src/: lib.rs
palace-video/: Cargo.toml
palace-video/src/: lib.rs
palace-volume/: Cargo.toml
palace-volume/src/: lib.rs
palace-vvd/: Cargo.toml
palace-vvd/src/: lib.rs
palace-winit/: Cargo.toml
palace-winit/src/: lib.rs
palace-zarr/: Cargo.toml
palace-zarr/src/: lib.rs  zip_reader.rs  zip_writer.rs
py-palace/: .gitignore  Cargo.toml  Readme.md  bench.py  bench_io.py  bench_randomwalker.py  build.sh  demo.py  demo2d.py  palace.pyi  palace_util.py  pyproject.toml  randomwalker.py  randomwalker2d.py
py-palace/src/: functions.rs  jit.rs  lib.rs  types.rs
py-palace/src/types/: core.rs  event.rs  gui.rs  splitter.rs  tensor.rs  transfer_function.rs
py-vng/: .gitignore  Cargo.toml  Readme.md  demo.py  test.py
py-vng/src/: conversion.rs  functions.rs  lib.rs  types.rs
py-vng/src/types/: core.rs  event.rs  gui.rs  splitter.rs  tensor.rs
src/: array.rs  data.rs  experiment.rs  id.rs  main.rs  operator.rs  operators.rs  ram_allocator.rs  runtime.rs  storage.rs  task.rs  task_graph.rs  task_manager.rs  test_util.rs  threadpool.rs  util.rs  vulkan.rs
src/operators/: constant.rs  mod.rs  png_writer.rs  rasterize_function.rs  scalar.rs  sliceviewer.rs  tensor.rs  volume.rs  volume_gpu.rs
src/operators/reader/: hdf5.rs  mod.rs  nifti.rs  raw.rs  vvd.rs
src/storage/: gpu.rs  mod.rs  ram.rs
src/vulkan/: memory.rs  pipeline.rs  shader.rs  state.rs  window.rs
state-link/: Cargo.toml
state-link-derive/: Cargo.toml
state-link-derive/src/: lib.rs
state-link/src/: lib.rs  py.rs
state-link/tests/: derive.rs
tools/: zip_zarr
vng-core/: Cargo.toml  build.rs
vng-core/src/: aabb.rs  array.rs  chunk_utils.rs  coordinate.rs  data.rs  dim.rs  event.rs  id.rs  lib.rs  mat.rs  operator.rs  operators.rs  runtime.rs  state.rs  storage.rs  task.rs  task_graph.rs  test_util.rs  util.rs  vec.rs  vulkan.rs
vng-core/src/glsl/: atomic.glsl  eigenvalues.glsl  hash.glsl  mat.glsl  mat_generic.glsl  sample.glsl  util.glsl  vec.glsl  vec_generic.glsl
vng-core/src/operators/: array.rs  bin_ops.rs  gui.rs  kernels.rs  png_writer.rs  rasterize_function.rs  raw.rs  raycaster.rs  resample.rs  scalar.rs  sliceviewer.rs  splitter.rs  tensor.rs  vesselness.rs  volume.rs  volume_gpu.rs
vng-core/src/operators/reader/: nifti.rs  vvd.rs
vng-core/src/storage/: cpu.rs  disk.rs  gpu.rs  ram.rs
vng-core/src/vulkan/: memory.rs  pipeline.rs  shader.rs  state.rs  window.rs
vng-hdf5/: Cargo.toml
vng-hdf5/src/: lib.rs
vng-nifti/: Cargo.toml
vng-nifti/src/: lib.rs
vng-vvd/: Cargo.toml
vng-vvd/src/: lib.rs
