[workspace]

members = [
    "palace-core",
    "palace-hdf5",
    "palace-vvd",
    "palace-nifti",
    "demo-sliceviewer",
    "demo-mean",
    "demo-raycaster",
    "demo-large",
    "state-link",
    "state-link-derive",
    "py-palace",
]

resolver = "2"

[profile.release]
debug = true
#lto = true
#codegen-units = 1
panic = "abort"
