[workspace]

members = [
    "palace-core",
    "palace-hdf5",
    "palace-vvd",
    "palace-nifti",
    "demo-sliceviewer",
    "demo-mean",
    "demo-raycaster",
    "demo-large",
    "id",
    "id-derive",
    "state-link",
    "state-link-derive",
    "py-palace", "palace-volume",
]

resolver = "2"

[profile.release]
debug = true
#lto = true
#codegen-units = 1
panic = "abort"
