[workspace]

members = [
    "palace-core",
    "palace-hdf5",
    "palace-vvd",
    "palace-nifti",
    "palace-io",
    "palace-winit",
    "py-palace",
    "demo-sliceviewer",
    "demo-mean",
    "demo-raycaster",
    "demo-large",
    "id",
    "id-derive",
    "state-link",
    "state-link-derive", "palace-zarr", "convert", "palace-png",
]

resolver = "2"

[profile.release]
debug = true
#lto = true
#codegen-units = 1
panic = "abort"
