[package]
name = "demo-large"
version = "0.1.0"
edition = "2021"

[dependencies]
palace-core = { path = "../palace-core" }
palace-hdf5 = { path = "../palace-hdf5" }
palace-vvd = { path = "../palace-vvd" }
palace-nifti = { path = "../palace-nifti" }
winit = "0.28"
clap = { version = "4.0", features = ["derive"] }
bytesize = "1.3.0"
