[package]
name = "demo-large"
version = "0.1.0"
edition = "2021"

[dependencies]
palace-core = { path = "../palace-core" }
palace-vvd = { path = "../palace-vvd" }
palace-io = { path = "../palace-io" }
palace-winit = { path = "../palace-winit" }
palace-png = { path = "../palace-png" }
clap = { version = "4.0", features = ["derive"] }
bytesize = "1.3.0"
