[package]
name = "demo-large"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
palace-core = { path = "../palace-core" }
palace-vvd = { path = "../palace-vvd" }
palace-io = { path = "../palace-io" }
palace-winit = { path = "../palace-winit" }
palace-png = { path = "../palace-png" }
clap = { version = "4.0", features = ["derive"] }
bytesize = "1.3.0"

[features]
default = ["hdf5", "vvd", "nifti", "zarr", "png", "video"]
hdf5 = ["palace-io/hdf5"]
vvd = ["palace-io/vvd"]
nifti = ["palace-io/nifti"]
zarr = ["palace-io/zarr"]
png = ["palace-io/png"]
video = ["palace-io/video"]
