[package]
name = "demo-mean"
version = "0.1.0"
edition = "2021"

[dependencies]
palace-core = { path = "../palace-core" }
#palace-hdf5 = { path = "../palace-hdf5" }
palace-vvd = { path = "../palace-vvd" }
palace-nifti = { path = "../palace-nifti" }
clap = { version = "4.0", features = ["derive"] }
bytesize = "1.3.0"
