[package]
name = "demo-raycaster"
version = "0.1.0"
edition = "2021"

[dependencies]
palace-core = { path = "../palace-core" }
palace-volume = { path = "../palace-volume" }
palace-vvd = { path = "../palace-vvd" }
winit = "0.28"
clap = { version = "4.0", features = ["derive"] }
cgmath = { version="0.18.0" }
bytesize = "1.3.0"
