[package]
name = "demo-raycaster"
version = "0.1.0"
edition = "2021"

[dependencies]
palace-core = { path = "../palace-core" }
palace-volume = { path = "../palace-volume" }
palace-vvd = { path = "../palace-vvd" }
palace-winit = { path = "../palace-winit" }
clap = { version = "4.0", features = ["derive"] }
cgmath = { version="0.18.0" }
bytesize = "1.3.0"
