[package]
name = "palace-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
bytemuck = { version = "1.12", features = ["derive", "min_const_generics"] }
itertools = "0.10"
derive_more = "0.99"
ash = { version = "0.38.0" }
futures = "0.3"
good_memory_allocator = "0.1.7"
oneshot = { version = "0.1.5", default-features = false }
ndarray = "0.16"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
num_cpus = "1.15.0"
pin-project = "1.0"
#gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", rev = "642dc9135846b54512136af0508a2f4b54844fc1" }
gpu-allocator = { git = "https://github.com/ftilde/gpu-allocator", rev = "562b463643385dcd851c117fd34bf61e30882090" }
#gpu-allocator = { path = "../../gpu-allocator" }
cstr = "0.2.11"
shaderc = "0.9.1"
crevice = { version="0.12.0", features = ["cgmath"] }
graphviz-rust = "0.6.1"
spirq = "1.2.1"
spirv = "0.3.0"
cgmath = { version="0.18.0" }
winit = "0.30"
winapi = "0.3.9"
im-rc = "15.1"
egui = "0.22"
array-init = "2.1.0"
state-link = { path = "../state-link" }
id = { path = "../id" }
num = "0.4.1"
pyo3 = { version = "0.25.1", features = [], optional = true }
#pyo3-stub-gen = { version = "0.11.1", features = ["numpy"], optional = true }
pyo3-stub-gen = { git = "https://github.com/ftilde/pyo3-stub-gen", features = ["numpy"], optional = true }
numpy = { version = "0.25.0", features = [], optional = true }
ahash = "0.8.6"
priority-queue = "1.3.2"
gs-core = { path = "../graph-stream/gs-core" }
bytesize = "1.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
spmc = "0.3.0"

[features]
default = ["python"] #TODO: We don't actually want this by default, I think, but this makes rust-analyzer help in the respective code snippets
python = ["dep:pyo3", "dep:pyo3-stub-gen", "dep:numpy", "state-link/python"]
alloc_fill_nan = []
