[package]
name = "palace-io"
version = "0.1.0"
edition = "2021"

[dependencies]
palace-core = { path = "../palace-core" }
palace-hdf5 = { path = "../palace-hdf5" }
palace-vvd = { path = "../palace-vvd" }
palace-nifti = { path = "../palace-nifti" }
palace-zarr = { path = "../palace-zarr" }
palace-png = { path = "../palace-png" }
