[package]
name = "palace-nifti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palace-core = { path = "../palace-core" }
nifti = { version = "0.15.0", features = ["ndarray_volumes"] }
ndarray = "0.15.6"
