[package]
name = "palace-nifti"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palace-core = { path = "../palace-core" }
id = { path = "../id" }
nifti = "0.16.0"
ndarray = "0.16"
