[package]
name = "palace-vvd"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palace-core = { path = "../palace-core" }
sxd-xpath = "0.4"
sxd-document = "0.3"
memmap = "0.7.0"
ndarray = "0.16"
futures = "0.3.30"
itertools = "0.13.0"
