[package]
name = "palace-zarr"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
itertools = "0.13.0"
palace-core = { path = "../palace-core" }
id = { path = "../id" }
serde_json = "1.0.127"
zarrs = { version = "0.19.2", default-features = false, features=["zstd", "filesystem"] }
zip = "3.0.0"
