[package]
name = "palace"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
name = "palace"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-stub-gen = { version = "0.6.0", features = ["numpy"] }
numpy = "0.23"
derive_more = "0.99"
palace-core = { path = "../palace-core" }
palace-vvd = { path = "../palace-vvd" }
palace-io = { path = "../palace-io" }
palace-winit = { path = "../palace-winit" }
state-link = { path = "../state-link" }
id = { path = "../id" }
