[package]
name = "vng"
version = "0.1.0"
edition = "2021"

[lib]
name = "vng"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.1", features = ["extension-module"] }
vng-core = { path = "../vng-core" }
vng-vvd = { path = "../vng-vvd" }
derive_more = "0.99"
numpy = "0.19.0"
winit = "0.28"
