[package]
name = "state-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
state-link-derive = { path = "../state-link-derive" }
pyo3 = { version = "0.19.1", features = [], optional = true }

[features]
default = []
python = ["dep:pyo3", "state-link-derive/python"]
