[package]
name = "state-link"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
state-link-derive = { path = "../state-link-derive" }
pyo3 = { version = "0.25.1", features = ["py-clone"], optional = true }
#pyo3-stub-gen = { version = "0.11.1", features = ["numpy"], optional = true }
pyo3-stub-gen = { git = "https://github.com/ftilde/pyo3-stub-gen", features = ["numpy"], optional = true }

[features]
default = []
python = ["dep:pyo3", "state-link-derive/python", "dep:pyo3-stub-gen"]
