[package]
name = "vng-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1_smol = "1.0.0"
memmap = "0.7.0"
bytemuck = { version = "1.12", features = ["derive", "min_const_generics"] }
itertools = "0.10"
derive_more = "0.99"
ash = { version = "0.37.0" }
futures = "0.3"
good_memory_allocator = "0.1.7"
oneshot = { version = "0.1.5", default-features = false }
ndarray = "0.15.6"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
num_cpus = "1.15.0"
work-queue = "0.1.3"
pin-project = "1.0"
gpu-allocator = "0.22.0"
cstr = "0.2.11"
spirv-compiler = "0.2"
crevice = "0.12.0"
mint = "0.5.9"
graphviz-rust = "0.6.1"
spirq = "0.6.3"
spirv = "0.2.0"
png = "0.17.7"
cgmath = { version="0.18.0", features=["mint"] }
winit = "0.28"
