[package]
name = "gsgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ['derive'] }
layout-rs = "0.1.1"
#macroquad = "0.4.4"
gs-core = { path = "../gs-core" }
comfy = "0.3.1"

[workspace]

[profile.release]
debug = true
#lto = true
#codegen-units = 1
panic = "unwind"
